style.css
body {
    background-color: #f8f8f8;
    color: #333;
    font-family: Arial, Helvetica, sans-serif;
    line-height: 1.5;
    margin: .5em auto;
    max-width: 750px;
    padding: 0 .5em;
}

header {
    margin: 1em 0;
}

nav {
    display: flex;
    gap: 1em;
}

h1 {
    margin-block: 0.67em;
    font-size: 2em;
}

a {
    color: #0066cc;
    padding: .25em 0;
}

a:focus {
    outline-color: #ff8000;
    outline-style: solid;
    outline-width: .2em;
}

pre {
    background-color: #e8e8e8;
    overflow-x: auto;
    padding: 1em;
}

code {
    font-family: "Monaco", monospace;
}

@media (prefers-color-scheme:dark) {
    body {
        background-color: #333;
        color: #f8f8f8;
    }

    a {
        color: #33adff;
    }
}

